# api/app.js
@@ -21,7 +21,7 @@ app.use(bodyParser.urlencoded({extended: true}));
 app.use(bodyParser.json());
 
 // Routes
-
+const testimonialRoute = require('./routes/testimonialRoute');
 const yearlyRoute = require('./routes/getYearly');
 const transactionRoute = require('./routes/getLatestTransactions');
 const addTransactionRoute = require('./routes/addTransactions');
@@ -37,6 +37,7 @@ const walletRoute = require('./routes/getUserWallet');
 const solditemsRoute = require('./routes/getSoldItems');
 
 
+app.use('/api/testimonials', testimonialRoute);
 app.use('/api/yearly', yearlyRoute);
 app.use('/api/update-transaction', updateTransactionRoute);
 app.use('/api/transactions',transactionRoute );
